Small fix login button width on smaller laptop screen

--- a/frontend/my-react-app/public/styles/pages.css
+++ b/frontend/my-react-app/public/styles/pages.css
@@ -895,6 +895,10 @@
         height: 32px;
         width: 300px;
     }
+    .login-form input[type="submit"] {
+        width: 330px;
+        height: 30px;
+    }
     .login-gaji {
         grid-template-rows: 30px 1fr;
         font-size: 0.9rem;
@@ -1012,7 +1016,12 @@
     }
 
     .login-form input {
-        width: 300px;
+        width: 210px;
+    }
+
+    .login-form input[type="submit"] {
+        width: 240px;
+        height: 30px;
     }
 
     /* Home Page */
